--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.3.3",
     "cdbreact": "^1.2.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^17.0.2",
     "react-favicon": "0.0.24",
     "react-router-dom": "^5.3.0",
@@ -18,9 +20,9 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-   "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
+    "test": "react-scripts --openssl-legacy-provider test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
